Refactor podcast subscription DB and API
